--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,7 @@ media/
 
 # Test binary, built with `go test -c`
 *.test
-
+./test
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
 
